test_yuriiq/catalog/language/russian/affiliate/forgotten.php
<?php

// text
$_['text_account']	= 'Кабинет Партнера';
$_['text_forgotten']	= 'Забыли пароль?';
$_['text_success']	= 'Новый пароль был выслан на Ваш адрес электронной почты.';
$_['text_email']	= 'Введите адрес электронной почты Вашей учетной записи. Нажмите кнопку Продолжить, чтобы получить пароль по электронной почте.';
$_['text_your_email']	= 'Ваш E-Mail';

// error
$_['error_email']	= 'Такой E-Mail адрес не найден, попробуйте снова!';

// entry
$_['entry_email']	= 'E-Mail адрес:';

// heading
$_['heading_title']	= 'Забыли пароль?';
?>